Fixed footer's gap

--- a/styles/06-components/common/components-footer.scss
+++ b/styles/06-components/common/components-footer.scss
@@ -56,7 +56,7 @@
     display: grid;
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
-    gap: 30px 45px;
+    gap: 32px 23px;
     padding: 50px 0;
 
     @include for-desktop-up {
